# billy-ai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.ai/context/: core.md
.ai/recipes/: ai-structure.md  recipe.md
.ai/recipes/core/: module.md  testing.md
.ai/recipes/web/: platform-tier.md
.ai/rules/: core.md
.claude/memory/: MEMORY.md  bil-10_2026-07-16.md  bil-11_2026-07-16.md  bil-12_2026-07-16.md  bil-13_2026-07-16.md  bil-14_2026-07-16.md  bil-15_2026-07-17.md  bil-16_2026-07-17.md  bil-17_2026-07-17.md  bil-4_2026-07-14.md  bil-5_2026-07-14.md  bil-6_2026-07-14.md  bil-7_2026-07-14.md  bil-8_2026-07-14.md  bil-9_2026-07-13.md  bil-9_2026-07-14.md
.github/workflows/: build.yml  ci.yml
docs/: BUILD.md  PARSER_PLAN.md
scripts/: build.py
src/parts_parser/: __main__.py  config.py  keepawake.py  llm.py  logging_setup.py  models.py  store.py
src/parts_parser/gui/: __init__.py  drop_zone.py  main_window.py  settings_dialog.py  source_panels.py  worker.py
src/parts_parser/output/: excel.py  filtering.py
src/parts_parser/pdf/: extract.py  pages.py  pipeline.py  tables.py  toc.py  validate.py
src/parts_parser/web/: discovery.py  generic.py  insite.py  magento.py  (+3 more)
tests/: test_config.py  test_discovery.py  test_excel.py  test_extract.py  test_filtering.py  test_generic.py  test_gui_worker.py  test_insite.py  test_keepawake.py  test_llm.py  test_logging_setup.py  test_magento.py  test_pdf_pipeline.py  test_pdf_tables.py  test_pdf_toc.py  test_pdf_validate.py  test_session.py  test_site_config.py  test_store.py  test_web_pipeline.py
(+19 files in other folders)
