[project]
name = "parts-parser"
version = "0.1.0"
description = "Parses plumbing-parts websites and catalog PDFs into Excel workbooks."
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "platformdirs>=4.0",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parts_parser"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
